# paginate_pandas

./: README.md  requirements.txt  setup.cfg
src/paginate_pandas/: __init__.py  paginate.py
