[metadata]
name = paginate_pandas
url = https://github.com/jmberros/paginate_pandas
author = Juan Manuel Berros
author_email = juanmaberros@gmail.com
version = attr: paginate_pandas.__version__
description = An interactive paginator for pandas Series and DataFrames in Jupyter.
keywords = pandas, pagination, interactive, ipywidgets, jupyter
license = MIT

[options]
package_dir=
    =src

[options.packages.find]
where = src
