[metadata]
name = paginate_pandas
url = https://github.com/jmberros/paginate_pandas
author = Juan Manuel Berros
author_email = juanmaberros@gmail.com
version = attr: paginate_pandas.__version__
description = An interactive paginator for pandas Series and DataFrames in Jupyter.
long_description = A dead-simple interactive paginator for a pandas Series or DataFrames that leverages on ipywidgets and works beautifully on Jupyter Lab. It let's you easily browse through a possibly big (say, hundreds of thousands of rows) dataframe advancing page by page. It also let's you control the page size. If you deal with pandas a lot in Jupyter, this will change your quality of (developer) life.
long_description_content_type = text/markdown
keywords = pandas, pagination, interactive, ipywidgets, jupyter
license = MIT

[options]
package_dir=
    =src

[options.packages.find]
where = src
